// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrow 1`] = `
<ModalContainer
  arrow="top"
>
  <div
    className="md-modal-container-wrapper"
    data-arrow="top"
  >
    <ModalArrow
      side="top"
    >
      <svg
        className="md-modal-arrow-wrapper"
        data-side="top"
        height={12}
        viewBox="0 0 24 12"
        width={24}
        xmlns="http://www.w3.org/svg/2000"
      >
        <defs>
          <clipPath
            id="modal-arrow-cut-stroke-top"
          >
            <path
              d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
            />
          </clipPath>
        </defs>
        <path
          clipPath="url(#modal-arrow-cut-stroke-top)"
          d="m 0 12 l 10 -10 q 2 -2 4 0 l 10 10"
          data-color="primary"
        />
      </svg>
    </ModalArrow>
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={true}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    >
      <div>
        Example Text
      </div>
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  className="example-class"
>
  <div
    className="example-class md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  color="quaternary"
>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="quaternary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with elevation 1`] = `
<ModalContainer
  elevation={8}
>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={8}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  id="example-id"
>
  <div
    className="md-modal-container-wrapper"
    id="example-id"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  isPadded={true}
>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-padded={true}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isRounded 1`] = `
<ModalContainer
  round={150}
>
  <div
    className="md-modal-container-wrapper"
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={150}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    className="md-modal-container-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      className="md-modal-container-content"
      data-color="primary"
      data-elevation={0}
      data-horizontal-arrow={false}
      data-round={0}
      data-vertical-arrow={false}
    />
  </div>
</ModalContainer>
`;
